{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 28,
  "lineage": "bdf7a149-d35d-8054-f228-a16114f55e68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chlee_eip_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08412c7354bfdf798",
            "domain": "vpc",
            "id": "eipalloc-08412c7354bfdf798",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-81-50.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.81.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chlee_web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ff59cf8018f75b0",
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-0fbf79c1de22780f9",
            "domain": "vpc",
            "id": "eipalloc-04ff59cf8018f75b0",
            "instance": "i-0961327f411a189c4",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-06b1ca5d36baacf1a",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-15-165-239-93.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.239.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.chlee_web",
            "aws_internet_gateway.chlee_ig",
            "aws_security_group.chlee_sg",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chlee_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8dfc09b22389ad",
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:instance/i-0961327f411a189c4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0961327f411a189c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chlee2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06b1ca5d36baacf1a",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007914fc2c7ad35ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08344fce94e4e60de",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c46fc176d35dc04"
            ]
          },
          "dependencies": [
            "aws_security_group.chlee_sg",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chlee_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:internet-gateway/igw-028230a46ada6e662",
            "id": "igw-028230a46ada6e662",
            "owner_id": "574131207257",
            "tags": {
              "Name": "chleeig"
            },
            "tags_all": {
              "Name": "chleeig"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chlee_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:574131207257:loadbalancer/app/chlee-alb/167b6c8e67b3b93a",
            "arn_suffix": "app/chlee-alb/167b6c8e67b3b93a",
            "dns_name": "chlee-alb-513817371.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:574131207257:loadbalancer/app/chlee-alb/167b6c8e67b3b93a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chlee-alb",
            "security_groups": [
              "sg-03c46fc176d35dc04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058ace5fe45f010a1"
              },
              {
                "subnet_id": "subnet-08344fce94e4e60de"
              }
            ],
            "subnets": [
              "subnet-058ace5fe45f010a1",
              "subnet-08344fce94e4e60de"
            ],
            "tags": {
              "Name": "chlee-alb"
            },
            "tags_all": {
              "Name": "chlee-alb"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.chlee_sg",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chlee_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chlee_tgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chlee_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08412c7354bfdf798",
            "connectivity_type": "public",
            "id": "nat-04e6bbb63ce8ad54b",
            "network_interface_id": "eni-0a4a610557b27de3c",
            "private_ip": "10.0.0.140",
            "public_ip": "13.124.81.50",
            "subnet_id": "subnet-08344fce94e4e60de",
            "tags": {
              "Name": "chlee-ng"
            },
            "tags_all": {
              "Name": "chlee-ng"
            }
          },
          "dependencies": [
            "aws_eip.chlee_eip_ng",
            "aws_internet_gateway.chlee_ig",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chlee_ngrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:route-table/rtb-05ce51ad79f9109e7",
            "id": "rtb-05ce51ad79f9109e7",
            "owner_id": "574131207257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04e6bbb63ce8ad54b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chlee-ngrt"
            },
            "tags_all": {
              "Name": "chlee-ngrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.chlee_eip_ng",
            "aws_internet_gateway.chlee_ig",
            "aws_nat_gateway.chlee_ng",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chlee_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:route-table/rtb-00aa74175c8459875",
            "id": "rtb-00aa74175c8459875",
            "owner_id": "574131207257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028230a46ada6e662",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chlee-rt"
            },
            "tags_all": {
              "Name": "chlee-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.chlee_ig",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chlee_ngass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4e4121e8081b0a",
            "route_table_id": "rtb-05ce51ad79f9109e7",
            "subnet_id": "subnet-0e80f698a81d581fd"
          },
          "dependencies": [
            "aws_eip.chlee_eip_ng",
            "aws_internet_gateway.chlee_ig",
            "aws_nat_gateway.chlee_ng",
            "aws_route_table.chlee_ngrt",
            "aws_subnet.chlee_pri",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075cf9b344d0020f0",
            "route_table_id": "rtb-05ce51ad79f9109e7",
            "subnet_id": "subnet-0b24a6ca9d9f4bffd"
          },
          "dependencies": [
            "aws_eip.chlee_eip_ng",
            "aws_internet_gateway.chlee_ig",
            "aws_nat_gateway.chlee_ng",
            "aws_route_table.chlee_ngrt",
            "aws_subnet.chlee_pri",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chlee_rtas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca43e78ddd761ba0",
            "route_table_id": "rtb-00aa74175c8459875",
            "subnet_id": "subnet-08344fce94e4e60de"
          },
          "dependencies": [
            "aws_internet_gateway.chlee_ig",
            "aws_route_table.chlee_rt",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0319445e074a13378",
            "route_table_id": "rtb-00aa74175c8459875",
            "subnet_id": "subnet-058ace5fe45f010a1"
          },
          "dependencies": [
            "aws_internet_gateway.chlee_ig",
            "aws_route_table.chlee_rt",
            "aws_subnet.chlee_pub",
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chlee_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:security-group/sg-03c46fc176d35dc04",
            "description": "Allow HTTP,SSH,SQL,ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c46fc176d35dc04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow Basic",
            "name_prefix": "",
            "owner_id": "574131207257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chlee-sg"
            },
            "tags_all": {
              "Name": "chlee-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chlee_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:subnet/subnet-0e80f698a81d581fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e80f698a81d581fd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574131207257",
            "tags": {
              "Name": "chlee-puba"
            },
            "tags_all": {
              "Name": "chlee-puba"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:subnet/subnet-0b24a6ca9d9f4bffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b24a6ca9d9f4bffd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574131207257",
            "tags": {
              "Name": "chlee-pubc"
            },
            "tags_all": {
              "Name": "chlee-pubc"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chlee_pridb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:subnet/subnet-08276a670e5ef7481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08276a670e5ef7481",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574131207257",
            "tags": {
              "Name": "chlee-pridba"
            },
            "tags_all": {
              "Name": "chlee-pridba"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:subnet/subnet-099b5cf092f9a13ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-099b5cf092f9a13ac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574131207257",
            "tags": {
              "Name": "chlee-pridbc"
            },
            "tags_all": {
              "Name": "chlee-pridbc"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chlee_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:subnet/subnet-08344fce94e4e60de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08344fce94e4e60de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574131207257",
            "tags": {
              "Name": "chlee-puba"
            },
            "tags_all": {
              "Name": "chlee-puba"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:subnet/subnet-058ace5fe45f010a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-058ace5fe45f010a1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574131207257",
            "tags": {
              "Name": "chlee-pubc"
            },
            "tags_all": {
              "Name": "chlee-pubc"
            },
            "vpc_id": "vpc-0ba3836670a3bf33a"
          },
          "dependencies": [
            "aws_vpc.chlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chlee_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:574131207257:vpc/vpc-0ba3836670a3bf33a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081a34a2c8e991c29",
            "default_route_table_id": "rtb-0db35f101edb7a41b",
            "default_security_group_id": "sg-0bbd4a35e466b5759",
            "dhcp_options_id": "dopt-44014f2f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ba3836670a3bf33a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db35f101edb7a41b",
            "owner_id": "574131207257",
            "tags": {
              "key": "chlee-vpc"
            },
            "tags_all": {
              "key": "chlee-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}